Fixed layout on smaller screen sizes

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -23,7 +23,7 @@
 
   --input-height: 3rem;
   --input-border-radius: 0.5rem;
-  --input-width: 27.5rem;
+  --input-width: 80%;
   --input-bg-color: #6046ff;
   --input-box-shadow: 0 2rem 4rem 0 #8677ff;
   --input-font-size: var(--h3-font-size);
