--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,9 +1,7 @@
 .container {
   display: grid;
-  // justify-content: center;
   text-align: center;
   grid-template-rows: 3rem 1fr 3rem;
-  grid-template-columns: 1fr 60vw 1fr;
-  // justify-items: center;
+  grid-template-columns: 0.5fr 1fr 0.5fr;
   height: 100vh;
 }
